Mobile optimization, add SNS links, replace testimonial images with placeholders, remove gap section image

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header">
         <div class="container header__container">
             <h1 class="logo">Yuko English</h1>
-            <a href="#offer" class="btn btn--nav">無料相談はこちら</a>
+            <a href="#offer" class="btn btn--nav">無料相談</a>
         </div>
     </header>
 
@@ -40,11 +40,11 @@
                 </div>
                 <p class="hero__subtitle">
                     「正しい英語」よりも「伝わる英語」を。<br>
-                    あなたの性格（タイプ）に合った学習法で、<br>
-                    自由に話せる未来を迎えに行きませんか？
+                    あなたの性格に合った学習法で、<br class="sp-only">
+                    自由に話せる未来へ。
                 </p>
                 <a href="#offer" class="btn btn--primary btn--lg">
-                    <span>LINEで無料相談を予約する</span>
+                    <span>LINEで無料相談を予約</span>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <line x1="5" y1="12" x2="19" y2="12"></line>
@@ -60,7 +60,7 @@
         <div class="container">
             <div class="section__header text-center">
                 <span class="section__label">The Struggle</span>
-                <h3 class="section__title">こんな<span class="text-accent">悩み</span>、抱えていませんか？</h3>
+                <h3 class="section__title">こんな<span class="text-accent">悩み</span>、<br class="sp-only">抱えていませんか？</h3>
             </div>
             <div class="problem__grid">
                 <div class="problem__card">
@@ -71,7 +71,7 @@
                             <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z" />
                         </svg>
                     </div>
-                    <h4>勉強しているのに話せない</h4>
+                    <h4>勉強しているのに<br class="sp-only">話せない</h4>
                     <p>単語帳や文法の勉強は続けているけれど、いざ外国人を前にすると頭が真っ白になってしまう。</p>
                 </div>
                 <div class="problem__card">
@@ -83,7 +83,7 @@
                             <line x1="12" y1="17" x2="12.01" y2="17" />
                         </svg>
                     </div>
-                    <h4>「王道」のやり方が続かない</h4>
+                    <h4>「王道」のやり方が<br class="sp-only">続かない</h4>
                     <p>有名な学習法を試しても、なぜか自分には合わない。「努力不足だ」と自分を責めてしまう。</p>
                 </div>
                 <div class="problem__card">
@@ -96,7 +96,7 @@
                             <line x1="15" y1="9" x2="15.01" y2="9" />
                         </svg>
                     </div>
-                    <h4>「正しさ」に囚われている</h4>
+                    <h4>「正しさ」に<br class="sp-only">囚われている</h4>
                     <p>「間違っているかもしれない」という不安が先に立ち、言葉を発することが怖い。</p>
                 </div>
             </div>
@@ -120,8 +120,7 @@
                     </p>
                 </div>
                 <div class="gap__image">
-                    <img src="assets/images/note_header_2.png" alt="Understanding English Concept"
-                        class="img-fluid rounded-lg shadow-lg">
+                    <div class="img-placeholder">後で画像を追加</div>
                 </div>
             </div>
         </div>
@@ -132,13 +131,13 @@
         <div class="container">
             <div class="section__header text-center">
                 <span class="section__label">My Approach</span>
-                <h3 class="section__title">Yukoのコーチング<br>3つの特徴</h3>
+                <h3 class="section__title">Yukoのコーチング<br class="sp-only">3つの特徴</h3>
             </div>
             <div class="solution__grid">
                 <div class="solution__item">
                     <div class="solution__num">01</div>
                     <div class="solution__desc">
-                        <h4>「感覚派」も納得の学習設計</h4>
+                        <h4>「感覚派」も納得の<br class="sp-only">学習設計</h4>
                         <p>「とりあえず暗記」ではなく、あなたが「腑に落ちる」プロセスを重視。感覚を言語化し、あなただけの習得ルートを作ります。</p>
                     </div>
                 </div>
@@ -146,14 +145,14 @@
                     <div class="solution__num">02</div>
                     <div class="solution__desc">
                         <h4>マインドセット × 戦略</h4>
-                        <p>英語そのものだけでなく、メンタルブロック（心理的な壁）を取り除くライフコーチング的手法も導入。心が軽くなれば、言葉も出てきます。</p>
+                        <p>英語そのものだけでなく、メンタルブロックを取り除くライフコーチング的手法も導入。心が軽くなれば、言葉も出てきます。</p>
                     </div>
                 </div>
                 <div class="solution__item">
                     <div class="solution__num">03</div>
                     <div class="solution__desc">
-                        <h4>「伝わる」コミュニケーション</h4>
-                        <p>目指すのは完璧な文法ではなく、相手と心を通わせるコミュニケーション。現場（オーストラリア）で培った「生きた英語力」を伝授します。</p>
+                        <h4>「伝わる」<br class="sp-only">コミュニケーション</h4>
+                        <p>目指すのは完璧な文法ではなく、相手と心を通わせるコミュニケーション。現場で培った「生きた英語力」を伝授します。</p>
                     </div>
                 </div>
             </div>
@@ -169,22 +168,22 @@
             </div>
             <div class="testimonials__grid">
                 <div class="testimonial__card">
-                    <div class="testimonial__avatar">
-                        <img src="assets/images/customer_1.png" alt="Customer 1">
+                    <div class="testimonial__avatar testimonial__avatar--placeholder">
+                        <span>A</span>
                     </div>
                     <p class="testimonial__text">「英語学習を楽しいと思えたこと！初めに楽しくないと続かないと言われて救われました。」</p>
                     <div class="testimonial__author">40代 女性（英会話を楽しみたい）</div>
                 </div>
                 <div class="testimonial__card">
-                    <div class="testimonial__avatar">
-                        <img src="assets/images/customer_2.png" alt="Customer 2">
+                    <div class="testimonial__avatar testimonial__avatar--placeholder">
+                        <span>B</span>
                     </div>
                     <p class="testimonial__text">「自分はどういった勉強方法が好きか知れたので、今後の1人での学習方法が掴めました！」</p>
                     <div class="testimonial__author">20代 女性（留学準備中）</div>
                 </div>
                 <div class="testimonial__card">
-                    <div class="testimonial__avatar">
-                        <img src="assets/images/customer_3.png" alt="Customer 3">
+                    <div class="testimonial__avatar testimonial__avatar--placeholder">
+                        <span>C</span>
                     </div>
                     <p class="testimonial__text">「英語のサポートだけではなく、メンタルサポートもしてもらい、海外生活を支えてもらいました。」</p>
                     <div class="testimonial__author">20代 女性（ワーホリ中）</div>
@@ -204,7 +203,7 @@
                 <div class="profile__content">
                     <span class="section__label">Profile</span>
                     <h3 class="section__title">Yuko（裕子）</h3>
-                    <p class="profile__role">会話のための英語コーチ / オーストラリア在住</p>
+                    <p class="profile__role">会話のための英語コーチ<br class="sp-only"> / オーストラリア在住</p>
                     <p>
                         大阪出身、オーストラリア在住14年目。<br>
                         かつて留学カウンセラーとして多くの留学生をサポートする中で、「英語ができればもっと自由になれるのに」という歯痒さを痛感。<br>
@@ -213,6 +212,41 @@
                     <p>
                         ミッションは「自由で未来を切り開く力のある人が、英語スキルを手に入れてもっと自由に羽ばたけるようになる」こと。
                     </p>
+                    <!-- SNS Links -->
+                    <div class="profile__sns">
+                        <a href="https://x.com/YukoENGcoach" target="_blank" class="sns-link" aria-label="X (Twitter)">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="currentColor">
+                                <path
+                                    d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" />
+                            </svg>
+                        </a>
+                        <a href="https://www.instagram.com/yuko.australia_gc/" target="_blank" class="sns-link"
+                            aria-label="Instagram">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round">
+                                <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+                                <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+                                <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+                            </svg>
+                        </a>
+                        <a href="https://www.threads.com/@yuko.australia_gc" target="_blank" class="sns-link"
+                            aria-label="Threads">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="currentColor">
+                                <path
+                                    d="M12.186 24h-.007c-3.581-.024-6.334-1.205-8.184-3.509C2.35 18.44 1.5 15.586 1.472 12.01v-.017c.03-3.579.879-6.43 2.525-8.482C5.845 1.205 8.6.024 12.18 0h.014c2.746.02 5.043.725 6.826 2.098 1.677 1.29 2.858 3.13 3.509 5.467l-2.04.569c-1.104-3.96-3.898-5.984-8.304-6.015-2.91.022-5.11.936-6.54 2.717C4.307 6.504 3.616 8.914 3.589 12c.027 3.086.718 5.496 2.057 7.164 1.43 1.783 3.631 2.698 6.54 2.717 2.623-.02 4.358-.631 5.8-2.045 1.647-1.613 1.618-3.593 1.09-4.798-.31-.71-.873-1.3-1.634-1.75-.192 1.352-.622 2.446-1.284 3.272-.886 1.102-2.14 1.704-3.73 1.79-1.202.065-2.361-.218-3.259-.801-1.063-.689-1.685-1.74-1.752-2.96-.065-1.182.408-2.256 1.332-3.022.9-.747 2.132-1.142 3.558-1.142.646 0 1.27.076 1.874.216V8.544c-.61-.109-1.227-.163-1.847-.163-2.067 0-3.937.577-5.263 1.624-1.357 1.073-2.055 2.567-1.963 4.204.099 1.743.952 3.238 2.401 4.212 1.188.797 2.726 1.193 4.348 1.118 1.078-.051 1.973-.385 2.659-1.016.696-.641 1.18-1.623 1.439-2.917.582.34 1.06.74 1.42 1.193.692.865 1.016 1.88 1.016 3.2 0 1.39-.49 2.725-1.416 3.863-1.014 1.24-2.494 2.14-4.4 2.676-1.076.302-2.262.46-3.53.46z" />
+                            </svg>
+                        </a>
+                        <a href="https://note.com/limber_violet498" target="_blank" class="sns-link" aria-label="Note">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="currentColor">
+                                <path
+                                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 15h-2v-6h2v6zm4 0h-2v-6h2v6zm0-8H9V7h6v2z" />
+                            </svg>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -223,11 +257,11 @@
         <div class="container">
             <div class="offer__box">
                 <h3 class="offer__title">
-                    まずは「あなたに合った学習法」を<br>
+                    まずは<br class="sp-only">「あなたに合った学習法」を<br>
                     見つけにきませんか？
                 </h3>
                 <p class="offer__desc">
-                    公式LINEでは、英語学習のヒントや、<br>
+                    公式LINEでは、英語学習のヒントや、<br class="sp-only">
                     限定の「個別ロードマップ作成会」のご案内を配信しています。<br>
                     今なら、友達追加で無料プレゼントも配布中！
                 </p>
@@ -244,8 +278,43 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="container text-center">
-            <p>&copy; 2026 Yuko English Coaching. All Rights Reserved.</p>
+        <div class="container">
+            <div class="footer__sns">
+                <a href="https://x.com/YukoENGcoach" target="_blank" class="sns-link sns-link--footer"
+                    aria-label="X (Twitter)">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                        fill="currentColor">
+                        <path
+                            d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" />
+                    </svg>
+                </a>
+                <a href="https://www.instagram.com/yuko.australia_gc/" target="_blank" class="sns-link sns-link--footer"
+                    aria-label="Instagram">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+                        <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+                        <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+                    </svg>
+                </a>
+                <a href="https://www.threads.com/@yuko.australia_gc" target="_blank" class="sns-link sns-link--footer"
+                    aria-label="Threads">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                        fill="currentColor">
+                        <path
+                            d="M12.186 24h-.007c-3.581-.024-6.334-1.205-8.184-3.509C2.35 18.44 1.5 15.586 1.472 12.01v-.017c.03-3.579.879-6.43 2.525-8.482C5.845 1.205 8.6.024 12.18 0h.014c2.746.02 5.043.725 6.826 2.098 1.677 1.29 2.858 3.13 3.509 5.467l-2.04.569c-1.104-3.96-3.898-5.984-8.304-6.015-2.91.022-5.11.936-6.54 2.717C4.307 6.504 3.616 8.914 3.589 12c.027 3.086.718 5.496 2.057 7.164 1.43 1.783 3.631 2.698 6.54 2.717 2.623-.02 4.358-.631 5.8-2.045 1.647-1.613 1.618-3.593 1.09-4.798-.31-.71-.873-1.3-1.634-1.75-.192 1.352-.622 2.446-1.284 3.272-.886 1.102-2.14 1.704-3.73 1.79-1.202.065-2.361-.218-3.259-.801-1.063-.689-1.685-1.74-1.752-2.96-.065-1.182.408-2.256 1.332-3.022.9-.747 2.132-1.142 3.558-1.142.646 0 1.27.076 1.874.216V8.544c-.61-.109-1.227-.163-1.847-.163-2.067 0-3.937.577-5.263 1.624-1.357 1.073-2.055 2.567-1.963 4.204.099 1.743.952 3.238 2.401 4.212 1.188.797 2.726 1.193 4.348 1.118 1.078-.051 1.973-.385 2.659-1.016.696-.641 1.18-1.623 1.439-2.917.582.34 1.06.74 1.42 1.193.692.865 1.016 1.88 1.016 3.2 0 1.39-.49 2.725-1.416 3.863-1.014 1.24-2.494 2.14-4.4 2.676-1.076.302-2.262.46-3.53.46z" />
+                    </svg>
+                </a>
+                <a href="https://note.com/limber_violet498" target="_blank" class="sns-link sns-link--footer"
+                    aria-label="Note">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                        fill="currentColor">
+                        <path
+                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 15h-2v-6h2v6zm4 0h-2v-6h2v6zm0-8H9V7h6v2z" />
+                    </svg>
+                </a>
+            </div>
+            <p class="footer__copy">&copy; 2026 Yuko English Coaching. All Rights Reserved.</p>
         </div>
     </footer>
 
