Adjust title line breaks and align descriptions to left

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="container">
             <div class="section__header text-center">
                 <span class="section__label">The Struggle</span>
-                <h3 class="section__title">こんな<span class="text-accent">悩み</span>、<br class="sp-only">抱えていませんか？</h3>
+                <h3 class="section__title">こんな<span class="text-accent">悩み</span>、抱えていませんか？</h3>
             </div>
             <div class="problem__grid">
                 <div class="problem__card">
@@ -71,8 +71,8 @@
                             <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z" />
                         </svg>
                     </div>
-                    <h4>勉強しているのに<br class="sp-only">話せない</h4>
-                    <p>単語帳や文法の勉強は続けているけれど、いざ外国人を前にすると頭が真っ白になってしまう。</p>
+                    <h4>勉強しているのに話せない</h4>
+                    <p class="text-left">単語帳や文法の勉強は続けているけれど、いざ外国人を前にすると頭が真っ白になってしまう。</p>
                 </div>
                 <div class="problem__card">
                     <div class="problem__icon-wrapper">
@@ -83,8 +83,8 @@
                             <line x1="12" y1="17" x2="12.01" y2="17" />
                         </svg>
                     </div>
-                    <h4>「王道」のやり方が<br class="sp-only">続かない</h4>
-                    <p>有名な学習法を試しても、なぜか自分には合わない。「努力不足だ」と自分を責めてしまう。</p>
+                    <h4>「王道」のやり方が続かない</h4>
+                    <p class="text-left">有名な学習法を試しても、なぜか自分には合わない。「努力不足だ」と自分を責めてしまう。</p>
                 </div>
                 <div class="problem__card">
                     <div class="problem__icon-wrapper">
@@ -96,8 +96,8 @@
                             <line x1="15" y1="9" x2="15.01" y2="9" />
                         </svg>
                     </div>
-                    <h4>「正しさ」に<br class="sp-only">囚われている</h4>
-                    <p>「間違っているかもしれない」という不安が先に立ち、言葉を発することが怖い。</p>
+                    <h4>「正しさ」に囚われている</h4>
+                    <p class="text-left">「間違っているかもしれない」という不安が先に立ち、言葉を発することが怖い。</p>
                 </div>
             </div>
         </div>
@@ -137,7 +137,7 @@
                 <div class="solution__item">
                     <div class="solution__num">01</div>
                     <div class="solution__desc">
-                        <h4>「感覚派」も納得の<br class="sp-only">学習設計</h4>
+                        <h4>「感覚派」も納得の学習設計</h4>
                         <p>「とりあえず暗記」ではなく、あなたが「腑に落ちる」プロセスを重視。感覚を言語化し、あなただけの習得ルートを作ります。</p>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                 <div class="solution__item">
                     <div class="solution__num">03</div>
                     <div class="solution__desc">
-                        <h4>「伝わる」<br class="sp-only">コミュニケーション</h4>
+                        <h4>「伝わる」コミュニケーション</h4>
                         <p>目指すのは完璧な文法ではなく、相手と心を通わせるコミュニケーション。現場で培った「生きた英語力」を伝授します。</p>
                     </div>
                 </div>
@@ -204,12 +204,12 @@
                     <span class="section__label">Profile</span>
                     <h3 class="section__title">Yuko（裕子）</h3>
                     <p class="profile__role">会話のための英語コーチ<br class="sp-only"> / オーストラリア在住</p>
-                    <p>
+                    <p class="text-left">
                         大阪出身、オーストラリア在住14年目。<br>
                         かつて留学カウンセラーとして多くの留学生をサポートする中で、「英語ができればもっと自由になれるのに」という歯痒さを痛感。<br>
                         自身も「知識はあるのに話せない」壁を乗り越えた経験から、特に「感覚派」の学習者が無理なく続けられ、成果を出せるコーチングメソッドを確立。
                     </p>
-                    <p>
+                    <p class="text-left">
                         ミッションは「自由で未来を切り開く力のある人が、英語スキルを手に入れてもっと自由に羽ばたけるようになる」こと。
                     </p>
                     <!-- SNS Links -->
@@ -257,8 +257,7 @@
         <div class="container">
             <div class="offer__box">
                 <h3 class="offer__title">
-                    まずは<br class="sp-only">「あなたに合った学習法」を<br>
-                    見つけにきませんか？
+                    まずは「あなたに合った<br>学習法」を見つけにきませんか？
                 </h3>
                 <p class="offer__desc">
                     公式LINEでは、英語学習のヒントや、<br class="sp-only">
@@ -267,8 +266,7 @@
                 </p>
                 <div class="offer__actions">
                     <a href="https://lin.ee/bW7dV7w" target="_blank" class="btn btn--line btn--xl">
-                        <span class="icon-line">LINE</span>
-                        公式LINEに登録して無料相談
+                        <span class="icon-line">LINE</span> 公式LINEに登録して無料相談
                     </a>
                 </div>
                 <p class="offer__note">※無理な勧誘は一切ありませんのでご安心ください。</p>
