Remove duplicate LINE text from button

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 </p>
                 <div class="offer__actions">
                     <a href="https://lin.ee/bW7dV7w" target="_blank" class="btn btn--line btn--xl">
-                        <span class="icon-line">LINE</span> 公式LINEに登録して無料相談
+                        公式LINEに登録して無料相談
                     </a>
                 </div>
                 <p class="offer__note">※無理な勧誘は一切ありませんのでご安心ください。</p>
