Optimize mobile typography and layout: adjust font sizes, fix line breaks, and update button styles

--- a/index.html
+++ b/index.html
@@ -263,15 +263,14 @@
                 </h3>
                 <p class="offer__desc">
                     公式LINEでは、英語学習のヒントや、<br class="sp-only">
-                    限定の「個別ロードマップ作成会」のご案内を配信しています。<br>
-                    <span class="text-nowrap-sp">今なら、友達追加で無料プレゼントも配布中！</span>
+                    限定の「個別ロードマップ作成会」の<br class="sp-only">ご案内を配信しています。
                 </p>
                 <div class="offer__actions">
                     <a href="https://lin.ee/bW7dV7w" target="_blank" class="btn btn--line btn--xl">
                         公式LINEに登録して無料相談
                     </a>
                 </div>
-                <p class="offer__note"><span class="text-nowrap-sp">※無理な勧誘は一切ありませんのでご安心ください。</span></p>
+                <p class="offer__note">※無理な勧誘は一切ありませんので<br class="sp-only">ご安心ください。</p>
             </div>
         </div>
     </section>
