Update header logo to 'Yuko English Coach'

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Header -->
     <header class="header">
         <div class="container header__container">
-            <h1 class="logo">Yuko English</h1>
+            <h1 class="logo">Yuko English Coach</h1>
             <a href="#offer" class="btn btn--nav">無料相談</a>
         </div>
     </header>
