--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
                             aria-label="Threads">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="currentColor">
-                                <path
-                                    d="M14.192 2.919a9.62 9.62 0 0 0-3.192-.497c-3.13 0-5.832 1.34-7.618 3.51a10.082 10.082 0 0 0-1.84 3.79C1.196 11.235 1.05 12.8 1.05 14.51c0 2.217.443 4.194 1.26 5.86.817 1.666 1.99 3.01 3.424 3.974 1.433.957 3.12 1.488 4.908 1.488 1.132 0 2.228-.204 3.208-.574a8.623 8.623 0 0 0 2.656-1.574l-1.316-1.586a6.995 6.995 0 0 1-4.549 1.492c-1.328 0-2.576-.388-3.64-1.096-1.071-.709-1.92-1.748-2.502-3.033-.589-1.285-.92-2.738-.92-4.14 0-1.637.34-3.14 1.04-4.5.701-1.36 1.688-2.43 2.875-3.23.6-.39 1.23-.71 1.89-.96.65-.24 1.32-.37 2.01-.37.75 0 1.48.13 2.16.38.68.25 1.29.6 1.81 1.04.52.44.92.96 1.2 1.55.28.58.42 1.23.42 1.93 0 1.01-.19 1.83-.55 2.45-.37.62-.87 1.1-1.52 1.45-.48.25-1.02.4-1.6.43-.59.03-1.15-.1-1.63-.38-.49-.28-.88-.69-1.15-1.19-.27-.5-.41-1.1-.41-1.76v-.06c0-.85.17-1.53.53-2.02.35-.5.81-.76 1.4-.76.4 0 .73.13.97.38.25.26.38.59.38 1s-.12.76-.36 1.02c-.25.26-.58.39-.99.39-.23 0-.44-.06-.6-.17-.18-.11-.29-.26-.34-.44-.05-.18-.08-.38-.08-.6 0-.28.08-.5.23-.67.16-.17.37-.25.65-.25.21 0 .42.06.63.18.2.13.34.33.39.6.06.27.06.6.03.95-.03.35-.15.68-.35.98-.2.29-.48.52-.83.68-.35.15-.75.21-1.19.18-.44-.03-.85-.18-1.21-.44-.36-.26-.64-.61-.83-1.05-.18-.44-.27-.96-.27-1.55v-.11c0-.98.24-1.84.71-2.58.47-.73 1.11-1.3 1.92-1.7.8-.4 1.74-.59 2.8-.59 1.35 0 2.52.28 3.51.84 1 .56 1.8 1.34 2.4 2.34.6 1 .9 2.19.9 3.56 0 1.45-.35 2.73-1.04 3.84-.7 1.11-1.67 1.97-2.91 2.59z" />
+                                <text x="50%" y="55%" dominant-baseline="middle" text-anchor="middle" font-size="20"
+                                    font-weight="bold" font-family="Arial, sans-serif">@</text>
                             </svg>
                         </a>
                         <a href="https://note.com/limber_violet498" target="_blank" class="sns-link" aria-label="Note">
@@ -300,8 +300,8 @@
                     aria-label="Threads">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
                         fill="currentColor">
-                        <path
-                            d="M14.192 2.919a9.62 9.62 0 0 0-3.192-.497c-3.13 0-5.832 1.34-7.618 3.51a10.082 10.082 0 0 0-1.84 3.79C1.196 11.235 1.05 12.8 1.05 14.51c0 2.217.443 4.194 1.26 5.86.817 1.666 1.99 3.01 3.424 3.974 1.433.957 3.12 1.488 4.908 1.488 1.132 0 2.228-.204 3.208-.574a8.623 8.623 0 0 0 2.656-1.574l-1.316-1.586a6.995 6.995 0 0 1-4.549 1.492c-1.328 0-2.576-.388-3.64-1.096-1.071-.709-1.92-1.748-2.502-3.033-.589-1.285-.92-2.738-.92-4.14 0-1.637.34-3.14 1.04-4.5.701-1.36 1.688-2.43 2.875-3.23.6-.39 1.23-.71 1.89-.96.65-.24 1.32-.37 2.01-.37.75 0 1.48.13 2.16.38.68.25 1.29.6 1.81 1.04.52.44.92.96 1.2 1.55.28.58.42 1.23.42 1.93 0 1.01-.19 1.83-.55 2.45-.37.62-.87 1.1-1.52 1.45-.48.25-1.02.4-1.6.43-.59.03-1.15-.1-1.63-.38-.49-.28-.88-.69-1.15-1.19-.27-.5-.41-1.1-.41-1.76v-.06c0-.85.17-1.53.53-2.02.35-.5.81-.76 1.4-.76.4 0 .73.13.97.38.25.26.38.59.38 1s-.12.76-.36 1.02c-.25.26-.58.39-.99.39-.23 0-.44-.06-.6-.17-.18-.11-.29-.26-.34-.44-.05-.18-.08-.38-.08-.6 0-.28.08-.5.23-.67.16-.17.37-.25.65-.25.21 0 .42.06.63.18.2.13.34.33.39.6.06.27.06.6.03.95-.03.35-.15.68-.35.98-.2.29-.48.52-.83.68-.35.15-.75.21-1.19.18-.44-.03-.85-.18-1.21-.44-.36-.26-.64-.61-.83-1.05-.18-.44-.27-.96-.27-1.55v-.11c0-.98.24-1.84.71-2.58.47-.73 1.11-1.3 1.92-1.7.8-.4 1.74-.59 2.8-.59 1.35 0 2.52.28 3.51.84 1 .56 1.8 1.34 2.4 2.34.6 1 .9 2.19.9 3.56 0 1.45-.35 2.73-1.04 3.84-.7 1.11-1.67 1.97-2.91 2.59z" />
+                        <text x="50%" y="55%" dominant-baseline="middle" text-anchor="middle" font-size="20"
+                            font-weight="bold" font-family="Arial, sans-serif">@</text>
                     </svg>
                 </a>
                 <a href="https://note.com/limber_violet498" target="_blank" class="sns-link sns-link--footer"
