Prevent unwanted auto-scroll on page load

--- a/index.html
+++ b/index.html
@@ -317,6 +317,13 @@
         </div>
     </footer>
 
+    <script>
+        // Prevent auto-scroll on load
+        if ('scrollRestoration' in history) {
+            history.scrollRestoration = 'manual';
+        }
+        window.scrollTo(0, 0);
+    </script>
 </body>
 
 </html>
